# cuda-multiplication

./: CMakeLists.txt  main.cu  multiplication.cu  transpose.cu
